--- a/all.css
+++ b/all.css
@@ -32,11 +32,19 @@ img {
 article img{
     margin: 0 auto 8px auto;
 }
+article.preview-post{
+    background: white;
+    padding:16px 10px 10px 10px;
+}
+article.preview-post img{
+    display:block;
+    margin-bottom:0 !important;
+}
 
 a:not(.btn):link, a:not(.btn):visited, a:not(.btn):active{
     color:var(--primary-bright);
 }
-a.btn, a.btn:link, a.btn:visited, a.btn:active, .header a{
+a.btn, a.btn:link, a.btn:visited, a.btn:active, .header a, h2 a{
     text-decoration: none;
 }
 a:active, a:hover{
@@ -170,7 +178,9 @@ article p{
     margin: 18px 0;
     max-width: 820px;
 }
-
+#home .col{
+    padding:18px;
+}
 article h1{
     font-size:1.867rem;
     font-weight:300;
@@ -184,10 +194,16 @@ article h2{
     margin:12px 0 12px 0;
     padding-top:12px;
 }
+article.preview-post h2{
+    font-size:1.1rem;
+    margin-right:12px !important;
+    padding-top:0;
+}
 
 article h3{
     font-size:1.2rem;
-    margin:12px 0 12px 0;
+    font-weight:300;
+    margin:12px 0 12px 8px;
     padding-top:8px;
 }
 
@@ -203,10 +219,13 @@ article h3{
         font-weight:300;
         margin:20px 0 24px 0;
     }
+    article.preview-post h2{
+        font-size:1.2rem;
+    }
 
     article h3{
         font-size:1.467rem;
-        margin:10px 0 10px 0;
+        margin:10px 0 10px 8px;
         padding-top:8px;
     }
 }
